fix the overflow issues in css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,10 +61,18 @@ body {
 .searchResultContainer {
   width: 299px;
   height: 717px;
-  margin: 0 auto;
+  margin: 1em auto 1em auto;
   background: #FFFFFF;
   border: 5px solid #000000;
   border-radius: 13px;
+}
+
+.searchResult {
+  margin: 0 auto;
+  width: 289px;
+  height: 707px;
+  padding: .4em;
+  overflow-y: scroll;
 }
 
 .searchBtnsContainer {
@@ -175,6 +183,12 @@ body {
 
 .tweet_card {
   text-align: left;
+  word-wrap: break-word;
+  overflow-x: scroll;
+}
+
+.tweet-card * p {
+  word-wrap: break-word;
 }
 
 #buttonBorder {
@@ -183,6 +197,12 @@ body {
 
 #buttonBorderThin {
   border: 3px solid aqua;
+}
+
+.tweetCardImg {
+    width: 100%;
+    max-height: 10em;
+    border-radius: 13px;
 }
 
 @media (min-width: 600px) {
@@ -232,6 +252,12 @@ body {
   .showcaseBtnsContainer {
     width: 778px;
   }
+  
+  .tweetCardImg {
+      width: 100%;
+      max-height: 15em;
+      border-radius: 13px;
+  }
 }
 
 @media (min-width: 1025px) {
@@ -270,6 +296,12 @@ body {
   }
   .showcaseBtnsContainer {
     width: 1219px;
+  }
+  
+  .tweetCardImg {
+      width: 100%;
+      max-height: 20em;
+      border-radius: 13px;
   }
 
 }
